# master/src/main/scala/org/apache/celeborn/service/deploy/master/http/api/v1/ApiV1MasterResource.scala
@@ -37,4 +37,7 @@ class ApiV1MasterResource extends ApiRequestContext {
 
   @Path("ratis")
   def ratisElection: Class[RatisResource] = classOf[RatisResource]
+
+  @Path("tags")
+  def tags: Class[TagsResource] = classOf[TagsResource]
 }
